src/objects/Case_Field_Visibility_cs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_name_cs__c</fullName>
        <description>API name del campo del caso che si vuole aggiungere nella sezione relativa al motivo di contatto</description>
        <label>API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genera_RMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genera_RMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motivo_di_contatto_cs__c</fullName>
        <description>Inserire il motivo di contatto del caso</description>
        <label>Motivo di contatto</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordinamento_cs__c</fullName>
        <label>Ordinamento</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Field Visibility</label>
</CustomObject>